# fcomp

./: .gitignore  AST.hs  GM.hs  LICENSE  Main.hs  Makefile  Parser.hs  README.md  Type.hs  Utils.hs  example.txt  fcomp.cabal  grammar.txt  syntax.txt  template.c  test  vm-ccp.c  vm-cp.c  vm.c
CodeGen/: CGen.hs  CGenCCP.hs  CGenCP.hs  gen.c  main.c  main_template.c  runtime.c  runtime.h
Common/: AST.hs  Def.hs
Core/: Def.hs  Gen.hs  Optimize.hs
GM/: Compile.hs  Def.hs  Exec.hs  Heap.hs  Inst.hs  Optimize.hs
Parser/: AST.hs  Lexer.hs  Parse.hs  Parsec.hs  Parser.hs  Renamer.hs
Prim/: Core.hs  GM.hs  Name.hs  Type.hs
Type/: Check.hs  Core.hs  CoreDef.hs  CoreGen.hs  Def.hs  Inf.hs
Utils/: Env.hs  Function.hs  Graph.hs  Map.hs  Parsec.hs  Set.hs  State.hs
app/: Main.hs
app/CodeGen/: CGen.hs
app/Common/: AST.hs  Def.hs
app/Core/: Def.hs  Gen.hs  Optimize.hs
app/GM/: Compile.hs  Def.hs  Optimize.hs
app/Parser/: Lexer.hs  Parse.hs  Parser.hs  Renamer.hs
app/Prim/: Core.hs  GM.hs  Name.hs  Type.hs
app/Type/: Def.hs  Inf.hs
app/Utils/: Env.hs  Function.hs  Parsec.hs  State.hs
examples/: 1.src  2.src  3.src  4.src  5.src  6.src  cyclist.src  fix.src  intops.src  lazy_and_or.src  let-poly.src  mutual_rec.src  nfib.src  nprime.src  nqueen.src  poly-data.src  poly-if.src  poly-list.src  ski-mono.src  ski.src
